# Evolution

./: .gitmodules  CMakeLists.txt  README.md
Evolution/: CMakeLists.txt
Evolution/include/Evolution/: Concepts.hpp  Environment.hpp  GeneratorTraits.hpp  StateFlow.hpp  TaskFlow.hpp  TaskFlowContainer.hpp  TaskFlowDebugger.hpp  Utils.hpp
EvolutionTest/: CMakeLists.txt  Test.cpp
evolution/include/evolution/: concepts.hpp  environment.hpp  generator_traits.hpp  state_flow.hpp  task_flow.hpp  task_flow_container.hpp  task_flow_debugger.hpp  utils.hpp
evolution_test/: CMakeLists.txt  test.cpp
include/Evolution/: ArgumentTraits.hpp  Environment.hpp  Evolution.hpp  GeneratorTraits.hpp  StateFlow.hpp  TBBFlow.hpp  TaskFlow.hpp  TaskFlowDebugger.hpp  TypeTraits.hpp  Utility.hpp  Utils.hpp
test/: CMakeLists.txt  Main.cpp  Test.cpp
